@@ -1,3 +1,7 @@
+2014-09-04	Erik E. Lorenz	<erik.e.lorenz@gmail.com>
+
+	* src/latexrefre.sh: looking for .pdf_tex files, too
+
 2014-09-03	Erik E. Lorenz	<erik.e.lorenz@gmail.com>
 
 	* src/pacman-disowned.sh: script to view disowned files added
